fixed dark mode bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
   .font-outline-2 {
     -webkit-text-stroke: 1px rgb(170, 170, 170);
   }
+
   .font-outline-4 {
     -webkit-text-stroke: 2px rgb(255, 255, 255);
   }
@@ -17,14 +18,14 @@
   }
 }
 
-*{
+* {
   scroll-behavior: smooth;
 }
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -37,12 +38,9 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    #10101a;
+      rgb(var(--background-end-rgb))) #10101a;
 }
 
 .nav-image {
@@ -60,10 +58,10 @@ body {
   position: relative;
   color: white;
   font-weight: bold;
-  text-align:center;
-  line-height:3rem;
+  text-align: center;
+  line-height: 3rem;
   font-family: sans-serif;
-  font-size:1.2rem;
+  font-size: 1.2rem;
 }
 
 .custom-button:hover {
@@ -75,8 +73,8 @@ body {
 .custom-button:before {
   content: '';
   position: absolute;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   width: 0;
   height: 0;
   border-top: 1.3rem solid #10101a;
@@ -86,8 +84,8 @@ body {
 .custom-button:after {
   content: '';
   position: absolute;
-  bottom:0;
-  right:0;
+  bottom: 0;
+  right: 0;
   width: 0;
   height: 0;
   border-bottom: 1.3rem solid #10101a;
